@startuml
interface Iterator{
    hasNext()
    next()
    remove()
}

interface MenuComponent{
    add()
    remove()
    getChild()
    print()
    createIterator()
}

class MenuItem{
    name
    description
    vegetarian
    price
}

class Waitress{
    printMenu()
    printVegetarianMenu()
}

Iterator <|-- CompositeIterator
Iterator <|-- ListIterator
Iterator <|-- NullIterator

MenuComponent <|-- Menu
MenuComponent <|-- MenuItem

Waitress o-- MenuComponent

@enduml